--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,26 @@
-python-telegram-bot==20.3
-telethon==1.34.1
-httpx==0.26.0
-solana==0.30.0
-solders==0.18.0
-python-dotenv==1.0.0
-cryptography==42.0.4
-pybase58==2.0.1
-asyncio==3.4.3
-python-dateutil==2.8.2
+anyio==4.9.0
+base58==2.1.1
+certifi==2025.7.14
+cffi==1.17.1
+construct==2.10.68
+construct-typing==0.6.2
+cryptography==45.0.5
+dotenv==0.9.9
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+jsonalias==0.1.1
+pathlib==1.0.1
+pyaes==1.6.1
+pyasn1==0.6.1
+pycparser==2.22
+python-dotenv==1.1.1
+python-telegram-bot==22.2
+rsa==4.9.1
+sniffio==1.3.1
+solana==0.36.7
+solders==0.26.0
+Telethon==1.40.0
+typing_extensions==4.14.1
+websockets==15.0.1
